--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-signin-client_id" content="26847710785-sjlvllgutdi3kbk2favpod5663d9ncm7.apps.googleusercontent.com">
 
   <title>The Magpie App</title>
  
@@ -16,11 +15,6 @@
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">  
   <!-- YOUR STYLES GO HERE -->
   <link rel="stylesheet" href="css/styles.css">	
-
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="js/login.js"></script>
 	
 </head>
 <body>
@@ -29,9 +23,7 @@
     <div id="wrapper">
        <div id="content">
             <img src="img/mglogo2.png" alt="Magpie Birdhouse">
-            <h1>Admin Login</h1>
-            <center><div class="g-signin2" data-onsuccess="onSignIn"></div></center>
-            <div id="userInfo"></div>
+            <h1>coming soon</h1>
         </div>
         <div id="footer">
             <p>copyright 2017</p>
