Updated Img, CSS for all known pages, small fixes to login page

--- a/fountpage.html
+++ b/fountpage.html
@@ -44,7 +44,7 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<img class="img-responsive" src="img/platforms01.png" alt="platforms">
-							<h3>CMS server is on many Platforms</h3>
+							<h3>Access on many Platforms</h3>
 							<p>The CMS service is web base and insures access to your collections and badges from any web capable device.</p>
 						</div>
 						<div class="col-sm-4">
