--- a/fountpage.html
+++ b/fountpage.html
@@ -30,7 +30,8 @@
 		<!-- MAGPIE'S AWESOME WEBSITE -->
 		<div id="wrapper">
 			<div id="content">
-				<img id="mainLogo" src="img/mglogo2.png" alt="Magpie Birdhouse">
+				<img id="mainLogo" src="img/MagpieOld.png" alt="Magpie Birdhouse">
+				<h5>MAGPIE</h5>
 				<h2 id="info">Magpie is an app that combines scavenge hunting and a guided tour of landmarks.<br />
 					Find Landmarks, complete collections, and learn about the world around you.
 					</h2>
@@ -43,35 +44,35 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/platforms01.png" alt="platforms">
+							<img class="img-responsive" src="img/smallPlaceHolder.png" alt="platforms">
 							<h3>Access on many Platforms</h3>
 							<p>The CMS service is web base and insures access to your collections and badges from any web capable device.</p>
 						</div>
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/collections01.png" alt="collections">
+							<img class="img-responsive" src="img/smallPlaceHolder.png" alt="collections">
 							<h3>Make Collections</h3>
 							<p>Build your own Magpie Collections and share them with other users. Also update collections and expand them.</p>
 						</div>
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/badges01.png" alt="badges">
+							<img class="img-responsive" src="img/smallPlaceHolder.png" alt="badges">
 							<h3>Add Badges</h3>
 							<p>Use existing or add your own Badges to your collections. Use Landmarks to make badges and link them to your collections</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/QRcodes01.png" alt="QRcodes">
+							<img class="img-responsive" src="img/largePlaceHolder.png" alt="QRcodes">
 							<h3>Set up QR codes</h3>
 							<p>Provide QR codes for landmarks so that users can redeem the badges. 
 								This is a must for poor to no network environments, such as Convention centers and National Parks.</p>
 						</div>
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/transferToApp01.png" alt="transferToApp">
+							<img class="img-responsive" src="img/largePlaceHolder.png" alt="transferToApp">
 							<h3>Send Collections to the App</h3>
 							<p>Send your collections to the Magpie app and share them on social media. Also keep track of your collections on the website.</p>
 						</div>
 						<div class="col-sm-4">
-							<img class="img-responsive" src="img/autoBackup.png" alt="autoBackup">
+							<img class="img-responsive" src="img/largePlaceHolder.png" alt="autoBackup">
 							<h3>Backups for the App</h3>
 							<p>The CMS keeps track of all down loads to the mobile app. Alowing for ease of backing up and recovery of user data.</p>
 						</div>
